# Omni-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_server.sh
.cache/clangd/index/: httplib.h.22BDD09147BA1A91.idx  json.hpp.F4E17A109969EFE8.idx  main.cpp.37CFDF9CDDC85B6B.idx  main.cpp.D11EDC7878F1D483.idx
client/include/: client.h  client_app.h  client_logger.h
client/src/: client.cpp  client_app.cpp  main.cpp
client/tests/: client_logger_tests.h  client_test.cpp
server/include/: server.h  server_app.h  server_auth.h  server_logger.h  server_request_handler.h
server/src/: main.cpp  server.cpp  server_app.cpp  server_auth.cpp  server_request_hadler.cpp
server/tests/: server_test.cpp  server_tests_logger.h
src/client/: main.cpp
src/client/src/: main.cpp
src/logger/: logger.h
src/server/: main.cpp
src/server/src/: main.cpp
